# lex-intel

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_MCP.md  SECURITY.md  lex.py  lex_server.py  llms.txt  pyproject.toml  requirements.txt
.claude/: orchestrate.py
.claude/agents/: analyst.md  chief.md  email.md  executor.md  scout.md  strategist.md  synthesizer.md  test-writer.md
.github/workflows/: tests.yml
ahgen/: ahgen.py  config.json  governance.py  poster.py  scrapers.py  state.json  substack.py
ahgen/drafts/: briefing-20260406-190740.md
ahgen/launchd/: com.b2b.newsletter.plist
ahgen/pending-newsletter/: 2026-04-06.html  2026-04-06.md  2026-04-06.meta.json  2026-04-06.status
articles/: beijing-to-breakfast-intro.md
blueprints/: README.md  agent-publishing.md  claude-md.md  github-pages.md  hub-site.md  llms-txt.md  repo-standards.md
docs/: MULTI_AGENT_ARCHITECTURE.md  feed.json  index.html  llms.txt
docs/archive/: 2026-03-04.html
lib/: analyze.py  db.py  email.py  publish.py  scrape.py  static_site.py  vectors.py
prompts/: stage1.md  stage2.md
research/: agent-audience-playbook.md  reddit-post-1-artificial.md  reddit-post-2-localllama.md  reddit-post-3-machinelearning.md  reddit-post-4-langchain.md  reddit-posts-ready.md
scripts/: apply-blueprints.sh  launchd-publish.sh  launchd-scrape.sh
setup/: com.erpaccess.lex-publish.plist  com.erpaccess.lex-scrape.plist  install.sh  run-cycle.sh  uninstall.sh
supabase/: config.toml
tests/: conftest.py  test_analyze.py  test_db.py  test_server.py  test_vectors.py
(+15 files in other folders)
